initialize commit